# rescale_freq_pmodes

./: CMakeLists.txt  Readme.md  data.h  decompose_nu.cpp  decompose_nu.h  linfit.cpp  linfit.h  main.cpp  read_ascii_Ncols.cpp  read_ascii_Ncols.h  rescale_freqs.cpp  rescale_freqs.h  tests.cpp
api/: CMakeLists.txt  api_server.cpp  api_tester.py
python/: prototype.py  tests.py
test_data/: example_decom.txt  example_nul.txt
